--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,100 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
-body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+#frame1 {
+	background-color: #3E4E80;
+	width: 100%;
+	height: 300px;
+}
+
+h3 {
+	color: #33567D;
+	margin: 5px;
+	
+}
+
+#frame2 {
+	position:absolute; top: 150px; left: 500px;
+	background-color: #FFFFFF;
+	width: 600px;
+	height: 400px;
+	box-shadow: 10px 10px 10px black;
+}
+
+.main-box {
+	
+	position:absolute; top: 70px; left: 500px;
+	width: 600px;
+	height: 100px;
+}
+
+.main-box li{
+	
+	list-style-type: none;
+	width: 250px;
+	height: 100px;
+	float: left;
+	margin: 0 15px;
+}
+
+#logo {
+	width: 180px;
+}
+
+.content-box {
+	
+	position:absolute; top: 270px; left: 50px;
+	width: 600px;
+	height: 100px;
+}
+
+.content-box li{
+	
+	list-style-type: none;
+	width: 250px;
+	height: 100px;
+	float: left;
+	margin: 0 15px;
+}
+
+p {
+	text-align: justify center;
+	 font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin: 5px;
+	font-size: 18px;
+	line-height: 26px;
+}
+
+#phones {
+	position: absolute; top: 100px; left: 100px;
+}
+
+footer {
+	position: absolute; bottom: 0; 
+	width: 100%;
+	height: 50px;
+	padding-top: 60px;
+}
+
+#foot {
+	position:absolute; bottom: 5px; 
+	width: 100%;
+	height: 40px;
+}
+
+#foot li{
+	color: #33567D;
+	list-style-type: none;
+	width: 80px;
+	height: 40px;
+	float: left;
+	margin: 0 30px;
+	 font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 18px;
+}
+
+#right {
+	color: grey;
+	font-size: 12px;
+	font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
