--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,81 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+a{
+  padding: 5px;
+}
+
+#blueBckg {
+  background-image: linear-gradient(#5972a0,#3e5587);
+  height: 300px;
+}
+#whiteBckg{
+  background-color: white;
+  padding: 25px;
+  border-radius: 10px;
+  box-shadow: 0 15px 30px 0 rgba(0,0,0,0.11),
+  0 5px 15px 0 rgba(0,0,0,0.08);
+}
+
+#mainSection{
+  width: 100%;
+  margin-top: -250px;
+}
+#title{
+  width: 60%;
+  color: #192156;
+}
+#littlePadding{
+  padding-left: 1rem;
+}
+#lastCheatByOmar{
+  margin-bottom: 50px; /*a  br qe pedooo porque no jala ya me rindo soy una basca en css */
+  padding-bottom: 40px;
+  box-sizing: border-box;
+}
+#paddingButton{
+  padding: 3px;
+}
+#padddingButtons{
+  padding: 20px;
+}
+.floatLeft {
+  width: 30%;
+  float: left;
+  padding: 2rem 1rem 1rem 4rem;
+}
+.inline{
+  display: inline;
+}
+.floatRight {
+  width: 50%;
+  float: right;
+  padding: 2rem 1rem 1rem 1rem;
+  margin-right: 3rem;
+}
+
+.verticalMid{
+  vertical-align: middle;
+}
+
+.btnCheat{
+  background-color: #6a84ae;
+  border: 1px solid #385086;
+  border-radius: 4px;
+  color: white;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+
+}
+
+.fixBottom{
+  position: fixed;
+  bottom: 1rem;
+  width: 100%;
+  height: 20px;
+  text-align: center;
+  color: #6e87af;
 }
