--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,132 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+*{
+  margin: 0px;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color: 49769c;
 }
+
+ 
+
+p {
+  font-size: 14px;
+  padding-left:30px;
+}
+
+h2{
+  font-size: 30px;
+  position: center;
+  padding-left: 30px;
+  padding-top:10px;
+  color:#06365f;
+  
+
+}
+h3{
+font-size:12px;
+font-weight: normal;
+
+}
+
+#logo {
+position:fixed;
+padding-left:625px;
+padding-right:900px;
+top:20%;
+background-size: 80%;
+}
+
+#contenedor{
+  width: 100%;
+  height: 320px;
+  background-image:url('../images/bgtile.png');
+  background-size:cover;
+
+}
+
+#telefonos{
+  padding-top: 0px;
+  padding-left: 300px;
+
+}
+.parent{
+  position: relative;
+}
+.telefonos{
+  position: absolute;
+  top: 20%;
+  left: 20%;
+}
+
+#recuadro{
+  width :300px;
+  height: 300px;
+  background-image:url('../images/frame.png');
+  background-repeat: repeat-y;
+  border-radius: 10px;
+  padding-right: 80px;
+  position: absolute;
+  left:580px;
+  bottom:120px;
+}
+
+#inside{
+
+
+  width: 80%;
+  height: 80%;
+  display: table-cell;
+  vertical-align: middle;
+  padding-left:150px; 
+
+
+}
+
+button {
+
+  float:left;
+width:90px;
+height:40px;
+background-color: #4d9add;
+color:white;
+font-size: 18;
+}
+
+#TOP{
+  padding-right:500px;
+}
+
+#iphone{
+  padding-top:20px;
+  padding-right:30px;
+  padding-left:20px;
+}
+#android{
+  padding-top:20px;
+  padding-left:0px;
+  padding-right:30px;
+}
+
+#bottom{
+  margin:10px;
+  width: 100%;
+  height: 50px;
+  background-color:white;
+  position: fixed;
+  top:650px;
+  color: #4b7eaa
+  
+
+}
+li{
+  position: center;
+  display:inline;
+  padding-right:10px;
+  font-size:12px;
+  text-transform: uppercase;
+}
+
