--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,94 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+*{
+  margin:0px;
+  padding:0px;
+
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("./../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+
+#logo {
+  width: 320px;
+  position: relative;
+  left: 500px;
+  top: 100px;
+}
+
+#login{ 
+  border: 1px groove #1c5380;
+  background-image: url("./../images/bgtile.png");
+  background-repeat: repeat-x;
+  text-align: center;
+  width: 100px;
+  height: 40px;
+  position: relative;
+  left:900px;
+  top:30px;
+  color: white;
+  padding-top:10px;
+  border-radius: 5px;
+}
+
+#cel{
+  width:320px;
+  height:510px;
+  position: absolute;
+  top: 50px;
+  left:120px;
+  
+  }
+
+#info {
+  width:450px;
+  height:355px;
+  border: 1px white groove;
+  border-radius: 5px;
+  position: relative;
+  top: 75px;
+  left: 500px;
+  background-color: white;
+  padding: 25px;
+}
+
+#infoimg{
+  position: relative;
+  left: 25px;
+}
+
+  
+h2{
+  color: #1c5380;
+}
+
+footer{
+    width:100%;
+    height:50px;
+    position: relative;
+    top: 100px;
+       
+}
+
+li{
+  display: inline;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #06365f;
+  font-size: 12px;
+}
+
+ul{
+  
+  text-align: center;
+}
+
+#final{
+  color: lightgray;
 }
