--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,77 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color:white;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+.titulo img{
+  position: relative;
+  left: 600px;
+  padding-top: 150px;
+  bottom: 35px;
+}
+.telefono{
+  position: relative;
+  left:200px;
+  bottom:160px;
+  margin-top: 0;
+}
+button{
+  position: relative;
+  left: 950px;
+  bottom: 35px;
+ background-image: url("../images/bgtile.png");
+ background-repeat: repeat-x;
+ border: 2px, solid, #1c5380;
+ border-width: 0.2px;
+ color: white;
+ height: 30px;
+ text-align: center;
+ font-weight: bold;
+
+}
+.parrafo{
+  width: 440px;
+  height: 200px;
+  float:right;
+  position:relative;
+  bottom: 590px;
+  right: 360px;
+  border: 2px, solid, #06365f;
+  background-color: white;
+  margin-top: 25px;
+  padding-left: 18px;
+  padding-right: 18px;
+  border-radius: 5px;
+  box-shadow: 3px 3px white;
+  
+
+}
+.bot{
+  position: relative;
+  bottom: 60px;
+  left: 50px;
+  height: 31px;
+  width: 95px;
+}
+h2{
+  color:#06365f;
+}
+.abajo{
+  width: 100%;
+  display: inline;
+  text-align: center;
+  color: #1c5380;
+  font-weight: 500;
+  position: relative;
+  left: 370px;
+  bottom:90px;
+}
+.copy {
+  position: relative;
+  left: 784px;
+  bottom: 115px;
+  color: grey;
+  font-weight: 400;
 }
