--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,103 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
+#imgen{
+  float:left;
+  margin-left: 150px;
+  margin-top: 100px;
+}
 
-body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+#logosInsta{
+  float:left;
+  margin-top: 120px;
+  margin-left: 40px;
+  width: 500px;
+  height: 120px;
+
+}
+
+#logUno{
+  float:left;
+  width: 250px;
+  height: 90px;
+}
+
+#logDos{
+  float:left;
+  margin-top: 30px;
+  margin-left: 150px;
+}
+
+h1{
+  font-family: "Helvetica Neue";
+  color: #06365f;
+}
+
+span{
+  display:block
+}
+  
+}
+
+section{
+  background-color:blue;
+  color:white;
+  height:500px
+  
+}
+
+#texto{
+    float:right;
+    margin-right: 10px;
+}
+
+#logotipo{
+    float:left;
+    margin-right: 20px;
+}
+#logotipoDos{
+    float:left;
+    margin-right: 190px;
+}
+
+
+
+#cuadro {
+  float:left;
+  margin-top: 10px;
+  margin-left: 40px;
+  background-color: white;
+  width: 500px;
+  height: 320px;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+section{
+  position: absolute;
+  height: 300px;
+  background-image: linear-gradient(#06365f,#1c5380);
+}
+
+#relativo{
+  position: relative;
+}
+
+footer{
+  margin-top: 700px;
+  margin-left: 300px;
+}
+
+#botones li{
+  display:inline-block;
+  font-family: "sans-serif";
+  font-size: 13px;
+}
+
+p{
+  font-family: "Helvetica";
+}
+
+#botonHome{
+  background-color: #06365f;
+  border: none;
+  color: antiquewhite;
+  border-radius: 5px;
 }
