--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,104 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+* {
+  margin: 0;
+  padding: 0;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  background-image: url("./../images/bgtile.png");
+  background-repeat: repeat-x;
+  position: relative;
+  top: 0%;
+  margin: auto;
+}
+#info {
+  margin-top: -250px;
+}
+h1 {
+  color: darkblue;
+  font-size: 19px;
+}
+#badges {
+  margin-left: 50px;
+  margin-top: 20px;
+}
+h1,
+p {
+  margin-left: 50px;
+}
+button {
+  background-image: url("./../images/bgtile.png");
+  background-repeat: repeat-x;
+  padding: 5px 10px;
+  color: white;
+  border-radius: 3px;
+  text-align: center;
+  text-decoration: none;
+  display: inline;
+  font-size: 16px;
+}
+
+.insta {
+  width: 235px;
+  float: left;
+}
+
+.login {
+  position: relative;
+  float: right;
+  margin-top: 2%;
+}
+
+.logocont {
+  width: 100%;
+  position: relative;
+  left: 25%;
+}
+
+#containerrgt {
+  padding-top: 3%;
+  position: relative;
+  float: right;
+  width: 50%;
+}
+
+#containerlft {
+  position: relative;
+  float: left;
+  width: 10%;
+}
+#masterinfo {
+  margin-top:100px;
+  position: relative;
+  top: 0%;
+  left: 10%;
+  right: 10%;
+  height: 650px;
+  width: 60%;
+}
+nav {
+  text-align: center;
+  text-transform: uppercase;
+  color: darkblue;
+}
+li {
+  font-size: 10px;
+  list-style: none;
+  display: inline;
+  text-align: center;
+  margin: 7px;
+  font-weight: 800;
+  font-family: Arial;
+}
+#copyr {
+  margin-left: 7px;
+  color: gray;
+  opacity: 0.6;
+}
+footer {
+  position: relative;
+  bottom: 0;
 }
