--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,125 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+
+*{
+  box-sizing: border-box
+}
+
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+ 
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif ;
+}
+
+.background-top {
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+  height: 280px;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: -1;
+}
+
+.container{
+  width: 850px;
+  margin: 0 auto;
+  position: relative;
+  margin-top: 100px;
+}
+
+.container-row-right{
+  position: absolute;
+  width: 60%;
+  right: 0;
+  display: inline-block;
+  height: 100%;
+}
+
+.container-row-left img{
+  position: absolute;
+  width: 40%;
+  margin-left: -37px;
+  display: inline-block;
+}
+
+.container-icons{
+  width: 100%;
+  height: 50px;
+  margin: 0 auto;
+  margin-top:20px;
+  padding: 12px;
+}
+
+#insta-icon{
+  width: 65%;
+  float:left;
+}
+
+.button-login{
+  background: linear-gradient(#6F92B0, #457298);
+  border: 1px solid #1c5380;
+  border-radius: 2px;
+  display: inline-block;
+  float: right;
+  padding: 10px;
+  margin-top: 21px;
+  padding-left: 45px;
+  padding-right: 17px;
+  font-weight: 600;
+  font-size: 14px;
+  color: white;
+}
+
+.button-icon {
+  position: absolute;
+  margin-left: -35px;
+  margin-top: -3px;
+}
+.container-text{
+  margin-top: 50px;
+  background: url('../images/frame.png');
+  background-repeat: no-repeat;
+  background-position: cover;
+  padding: 40px;
+}
+
+.container-text h2{
+  font-size: 1.85rem;
+  color: #06365f;
+  margin-top: 0;
+  line-height: 1.2em;
+}
+
+
+.container-text p{
+  font-size: 0.92rem;
+  color: black;
+  margin-top: 0;
+  line-height: 1.55em;
+}
+.container-text img{
+  margin-top: 25px;
+  padding-right: 15px;
+}
+
+.footer{
+  width: 100%;
+  position: absolute;
+  text-align:center;
+  bottom: 0px;
+  margin: 0 auto;
+  background-color: white;
+  padding: 40px;
+}
+
+.footer a{
+  padding: 10px;
+  color: #51799e;
+  font-weight: 600;
+}
+
+.footer .copyright {
+  color: #adadad;
 }
