--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -21,7 +21,9 @@ body {
   z-index: -1;
 } 
 .content {
-
+  width: 80%;
+  margin: 0 auto;
+  padding-top: 140px;
 }
 .content img{
   align-content: center;
@@ -29,4 +31,34 @@ body {
 }
 .info-block {
   
+}
+/* .login-button {
+  background-color: #1c5380;
+  display: inline-block;
+  width: 30
+}
+.login-button h4 {
+  color: white;
+}*/
+
+.login-button {
+  position: relative;
+  display: block;
+  background-color: #1c5380;
+  width: 100px;
+  border-radius: 6px;
+}
+
+.login-button h4 {
+  color: white;
+  display: inline-block;
+  padding-left: 5px;
+}
+.login-button  {
+  display: inline-block;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.info-header {
+
 }
