--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -23,7 +23,7 @@ body {
 .teleph-container {
 	width: 50%;
 	height: 600px;
-	
+	position: relative;
 	float: left;
 	margin: 0;
 }
@@ -37,10 +37,23 @@ body {
 	margin: 0;
 }
 
+.text-container {
+	background-image: url("../images/frame.png");
+	background-size: cover;
+	background-repeat: no-repeat;
+	padding: 20px;
+	margin-right: 15%;
+}
+
 .clearfix::after {
     content: "";
     clear: both;
     display: table;
+}
+
+footer {
+  text-transform: uppercase;
+  text-align: center;
 }
 
 li {
@@ -48,6 +61,12 @@ li {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+   
+}
+
+a {
+  text-decoration: none;
+  color: #06365f;
 }
 
 .copy {
