--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,99 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  width: 100%;
+  min-height: 100%;
+  background-image: linear-gradient(to bottom, #50779A 50%, white 50%);
+  background-repeat: no-repeat;
 }
+
+a:link {
+  color: #50779A;
+  text-decoration: none;
+
+}
+
+a:visited {
+  color: #50779A;
+  text-decoration: none;
+
+}
+
+.flex-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+
+}
+
+
+.div-phones {
+  width: 318px;
+  height: 512px;
+  display: inline-block;
+  margin: 50px;
+  margin-top: 100px;
+}
+
+.logo-text {
+  margin-top: 100px;
+  height: 500px;
+  width: 550px;
+  flex-direction: column;
+}
+
+
+
+
+
+.logo-button {
+
+  height: 100px;
+  width: 500px;
+
+}
+
+.div-text {
+  display: inline-block;
+  
+  background-image: url("https://github.com/ironhack-labs/lab-css-instagram-clone/blob/master/starter-code/images/frame.png?raw=true");
+  padding: 20px;
+  background-repeat: no-repeat;
+}
+
+#button {
+  background-color: #6A8EAD;
+  border: #346188;
+  width: 100px;
+  right: 400px;
+  top: 120px;
+  float: right;
+  text-align: center;
+  padding: 7px 10px;
+  padding-top: 10px;
+  
+  }
+
+  #logo {
+    float: left;
+    width: 300px;
+    height: 75px;
+    right: 550px;
+    top: 120px;
+
+  }
+
+  .navbar {
+    text-align: center;
+    word-spacing: 8px;
+    font-weight: bold;
+  }
+
+  h1 {
+    color: #50779A
+  }
+
+  
+
