--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -6,49 +6,110 @@ background: url("YOUR-LINK.COM")
 list-style
 text-decoration
 text-transform
-
 */
 
+* {
+  font-family: 'Arial Narrow Bold', sans-serif;
+}
+
 body {
-  font: 200 16px "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 200 16px Arial, sans-serif;
   margin: auto;
 }
 
 .top-half {
   background: linear-gradient(#7298b8, 40%, #2b5e8b 99%);
-  height:400px;
-  width:100%;
-}
-
-.top-container {
-  position:relative;
-  right:100 px;
-  bottom:50px;
+  height:40vh;
+  width:100vw;
+  posi
 }
 
 .ig-logo {
-position: relative;
-left:360px;
-top: 180px;
-width:
+  position:relative;
+  top:180px;
+  right:246px;
+  max-width:50%;
+  float:right;
 }
 
 .house-btn {
 position:relative;
-left:780px;
-top:110px;
+left:240px;
+top:200px;
 width: 90px;
 text-align:center;
 background: linear-gradient(#7298b8, 90%, #2b5e8b 110%);
 border: 1px solid rgb(43, 66, 110);
 border-radius:7%;
-padding:10px;
-padding-bottom:15px;
+padding:5px;
+padding-bottom:5px;
 color:white;
-font: 550 16px "Helvetica Neue", Helvetica, Arial, sans-serif;
+float: right;
 }
 
 .home-icon {
   float:left;
-  padding-right:15px;
+}
+
+.phones {
+  float:left;
+  position: relative;
+  bottom:130px;
+  max-width:480px;
+  margin-left:30px;
+}
+
+.frame-image {
+  position:relative;
+  right:60px;
+  bottom:50px;
+  max-width:50%;
+  float:right;
+  margin-right:50px;
+}
+
+.text-div {
+  float:clear;
+  position: relative;
+  bottom:272px;
+  left:20px;
+  word-wrap:break-word;
+}
+
+h2 {
+  color:#06365f;
+}
+
+p {
+  line-height:20px;
+}
+
+span {
+  font-weight:bold;
+}
+
+.app-dl {
+  position:relative;
+  bottom:240px;
+  left:20px;
+}
+
+.footer {
+  list-style-type:none;
+  display:inline-block;
+  position:relative;
+  bottom:200px;
+  left:80px;
+  word-spacing:10px;
+}
+
+.footer a {
+  text-decoration: none;
+  color: #06365f;
+  font-weight:bold;
+}
+
+.copyright {
+  font-weight:lighter;
+  color:gray;
 }
