--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,13 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+
+#background-img {
+  position: absolute;
+   
+  height: 30vh;
+  background-image: url("../images/bgtile.png");
+  background-size: auto;
+  width: 1000px;
+}
