--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -12,9 +12,86 @@ body {
 
 #background-img {
   position: absolute;
-   
-  height: 30vh;
+  height: 40vh;
+  width: 1375px;
   background-image: url("../images/bgtile.png");
-  background-size: auto;
-  width: 1000px;
+  }
+
+  #main-container{
+    position: absolute;
+    display: inline;
+    margin-left: 10%;
+    
+  }
+
+      
+
+      .img-mobiles{
+      background-image: url("../images/phones.png");
+      margin-top: 120px;
+      height: 510px;
+      width: 320px;
+      background-repeat: no-repeat;
+    
+    }
+
+    .main-content{
+      position: absolute;
+      align-items: stretch;
+      margin-top: 100px;
+      margin-left: 300px;
+    
+    }
+
+        .img-instagram {
+          position: absolute;
+          /* background-image: url("../images/brand.png"); */
+          height: 100%;
+          width: 100%;
+          background-repeat: no-repeat;
+        }
+
+        .login {
+          position: relative;
+          height: 35px;
+          width: 80px;
+          background-color: #0d61a5;
+          border-color: #06365f;
+          border-width: 2px;
+
+        }
+
+        .home {
+          position: absolute;
+          background-image: url("../images/home.png");
+          background-repeat: no-repeat;
+
+        }
+        /* .white-background {
+          position: absolute;
+          background-image: url("../images/frame.png"); 
+}*/
+        
+
+
+footer{
+  width: 100%;
+  position: absolute;
+  text-align:center;
+  bottom: 0px;
+  /* margin: 0 auto; */
+  background-color: white;
+  /* padding: 40px; */
 }
+  
+
+ .bottom{
+
+  padding: 10px;
+  
+  font-weight: 600;
+  /* position: absolute;
+  bottom: 0;
+  margin-bottom: 0%; */
+ 
+ }
