--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,6 +5,82 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+    font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin: 0;
 }
+
+.container-blue {
+    width: 100%;
+    height: 400px;
+    background-image: linear-gradient(to top, #06365f, #6789a5);
+}
+
+.title-main {
+    margin-right: 5%;
+    float: right;
+    width: 50%;
+    background-image: url(../images/brand.png);
+    background-repeat: no-repeat;
+    height: 90px;
+    margin-top: 100px;
+}
+
+.title-main a {
+    float: right;
+    border: 1px solid #06365f;
+    border-radius: 5px; 
+    text-decoration: none;
+    color: #fff;
+    padding: 10px;
+}
+
+.content-main {
+    width: 100%;
+    padding: 20px;
+    margin: 0 auto;
+}
+
+.content-left {
+    float: left;
+    margin-left: 5%;
+}
+
+.content-right {
+    margin-right: 5%;
+    float: right;
+    padding: 10px 30px;
+    width: 50%;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 2px 2px rgba(0, 0, 0, 0.2);
+}
+
+.content-right a {
+    text-decoration: none;
+}
+
+.content-right h2 {
+    color: #06365f;
+}
+
+.container-link {
+    /* border: 2px solid red; */
+    margin-top: 150px;
+    text-align: center;
+}
+
+.container-link ul li {
+    list-style: none;
+    display: inline-block;
+}
+
+.container-link ul li a {
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #4c7597;
+    padding: 10px;
+    font-weight: bold;
+}
+
+.container-link span{
+  color: gray;
